--- a/front/src/app/components/me/me.component.html
+++ b/front/src/app/components/me/me.component.html
@@ -10,8 +10,8 @@
     </mat-card-title>
     <mat-card-content>
       <div *ngIf="user" fxLayout="column" fxLayoutAlign="start center">
-        <p>Name: {{ user.firstName }} {{ user.lastName | uppercase }}</p>
-        <p>Email: {{ user.email }}</p>
+        <p class="name">Name: {{ user.firstName }} {{ user.lastName | uppercase }}</p>
+        <p class="email">Email: {{ user.email }}</p>
         <p *ngIf="user.admin" class="my2">You are admin</p>
         <div *ngIf="!user.admin" fxLayout="column" class="my2" fxLayoutAlign="center center">
           <p>Delete my account:</p>
